--- a/build.xml
+++ b/build.xml
@@ -654,8 +654,9 @@
           <dependency groupId="org.hamcrest" artifactId="hamcrest" version="2.2" scope="test"/>
           <dependency groupId="org.agrona" artifactId="agrona" version="0.9.26" />
           <dependency groupId="org.apache.lucene" artifactId="lucene-core" version="7.5.0" />
-          <dependency groupId="com.carrotsearch.randomizedtesting" artifactId="randomizedtesting-runner" version="2.1.2" />
-          <dependency groupId="org.hamcrest" artifactId="hamcrest-all" version="1.3" />
+          <dependency groupId="com.carrotsearch.randomizedtesting" artifactId="randomizedtesting-runner" version="2.1.2">
+              <exclusion groupId="junit" artifactId="junit"/>
+          </dependency>
         </dependencyManagement>
         <developer id="adelapena" name="Andres de la Peña"/>
         <developer id="alakshman" name="Avinash Lakshman"/>
@@ -725,17 +726,20 @@
         <dependency groupId="org.apache.ant" artifactId="ant-junit" version="1.9.7" scope="test"/>
         <!-- adding this dependency is necessary for assertj. When updating assertj, need to also update the version of
              this that the new assertj's `assertj-parent-pom` depends on. -->
-          <dependency groupId="org.junit" artifactId="junit-bom" type="pom" scope="test"/>
-          <dependency groupId="org.assertj" artifactId="assertj-core" scope="test"/>
-          <dependency groupId="org.awaitility" artifactId="awaitility" scope="test"/>
-          <dependency groupId="org.hamcrest" artifactId="hamcrest" scope="test"/>
-          <!-- coverage debs -->
-          <dependency groupId="org.jacoco" artifactId="org.jacoco.agent" scope="test"/>
-          <dependency groupId="org.jacoco" artifactId="org.jacoco.ant" scope="test"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman-install" scope="test"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman" scope="test"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman-submit" scope="test"/>
-          <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit" scope="test"/>
+        <dependency groupId="org.junit" artifactId="junit-bom" type="pom" scope="test"/>
+        <dependency groupId="org.assertj" artifactId="assertj-core" scope="test"/>
+        <dependency groupId="org.awaitility" artifactId="awaitility" scope="test"/>
+        <dependency groupId="org.hamcrest" artifactId="hamcrest" scope="test"/>
+        <!-- coverage debs -->
+        <dependency groupId="org.jacoco" artifactId="org.jacoco.agent" scope="test"/>
+        <dependency groupId="org.jacoco" artifactId="org.jacoco.ant" scope="test"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman-install" scope="test"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman" scope="test"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman-submit" scope="test"/>
+        <dependency groupId="org.jboss.byteman" artifactId="byteman-bmunit" scope="test"/>
+
+        <dependency groupId="org.apache.lucene" artifactId="lucene-core"/>
+        <dependency groupId="com.carrotsearch.randomizedtesting" artifactId="randomizedtesting-runner" scope="test"/>
       </artifact:pom>
 
       <!-- now the pom's for artifacts being deployed to Maven Central -->
@@ -779,7 +783,7 @@
         <dependency groupId="ch.qos.logback" artifactId="logback-core"/>
         <dependency groupId="ch.qos.logback" artifactId="logback-classic"/>
 
-        <!-- don't need hadoop classes to run, but if you use the hadoop stuff -->
+          <!-- don't need hadoop classes to run, but if you use the hadoop stuff -->
         <dependency groupId="org.apache.hadoop" artifactId="hadoop-core" optional="true" scope="provided"/>
         <dependency groupId="org.apache.hadoop" artifactId="hadoop-minicluster" optional="true" scope="provided"/>
 
@@ -820,6 +824,9 @@
         <dependency groupId="com.google.j2objc" artifactId="j2objc-annotations"/>
         <dependency groupId="org.hdrhistogram" artifactId="HdrHistogram"/>
         <dependency groupId="org.agrona" artifactId="agrona"/>
+        <dependency groupId="org.apache.lucene" artifactId="lucene-core"/>
+        <dependency groupId="com.carrotsearch.randomizedtesting" artifactId="randomizedtesting-runner" scope="test"/>
+        <dependency groupId="org.hamcrest" artifactId="hamcrest" scope="test"/>
 
         <!-- sasi deps -->
         <dependency groupId="de.jflex" artifactId="jflex" />
