--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -732,6 +732,7 @@ jobs:
             git remote set-branches --add apache '$branch'
             git fetch --depth 1 apache $branch
             git checkout $branch
+            git clean -fd
             # Loop to prevent failure due to maven-ant-tasks not downloading a jar..
             for x in $(seq 1 3); do
                 ${ANT_HOME}/bin/ant realclean; ${ANT_HOME}/bin/ant jar dtest-jar
@@ -748,7 +749,9 @@ jobs:
             fi
           done
           # and build the dtest-jar for the branch under test
+          ${ANT_HOME}/bin/ant realclean
           git checkout origin/$CIRCLE_BRANCH
+          git clean -fd
           for x in $(seq 1 3); do
               ${ANT_HOME}/bin/ant realclean; ${ANT_HOME}/bin/ant jar dtest-jar
               RETURN="$?"
