--- a/build.xml
+++ b/build.xml
@@ -847,7 +847,7 @@
     <!--
         The javadoc-jar target makes cassandra-javadoc.jar output required for publishing to Maven central repository.
     -->
-    <target name="javadoc-jar" description="Assemble Cassandra JavaDoc JAR file">
+    <target name="javadoc-jar" depends="javadoc" unless="no-javadoc" description="Assemble Cassandra JavaDoc JAR file">
       <mkdir dir="${javadoc.jars.dir}"/>
       <create-javadoc destdir="${javadoc.jars.dir}/thrift">
         <filesets>
@@ -869,9 +869,7 @@
           </fileset>
         </filesets>
       </create-javadoc>
-      <jar jarfile="${build.dir}/${final.name}-javadoc.jar"
-           basedir="${javadoc.jars.dir}/main"/>
-
+      <jar jarfile="${build.dir}/${final.name}-javadoc.jar" basedir="${javadoc.jars.dir}/main"/>
       <!-- javadoc task always rebuilds so might as well remove the generated docs to prevent
            being pulled into the distribution by accident -->
       <delete quiet="true" dir="${javadoc.jars.dir}"/>
@@ -897,7 +895,7 @@
     </target>
 
     <!-- creates release tarballs -->
-    <target name="artifacts" depends="jar,javadoc,gen-doc,build-test,stress-build-test"
+    <target name="artifacts" depends="jar,gen-doc,build-test,stress-build-test,sources-jar,javadoc-jar"
             description="Create Cassandra release artifacts">
       <mkdir dir="${dist.dir}"/>
       <!-- fix the control linefeed so that builds on windows works on linux -->
@@ -911,10 +909,8 @@
           <include name="${ant.project.name}-thrift-${version}.jar" />
         </fileset>
       </copy>
-      <copy todir="${dist.dir}/javadoc">
-        <fileset dir="${javadoc.dir}"/>
-      </copy>
-      <copy todir="${dist.dir}/doc">
+
+      <copy todir="${dist.dir}/doc" failonerror="false">
         <fileset dir="doc">
           <include name="cql3/CQL.html" />
           <include name="cql3/CQL.css" />
