Don't fork jvms in the build
On build machines with less than 1GB ram, use ANT_OPTS="-Xmx512m"

 patch by Mick Semb Wever; reviewed by Brandon Williams for CASSANDRA-16583

--- a/build.xml
+++ b/build.xml
@@ -398,9 +398,7 @@
       <echo>Building Grammar ${build.src.antlr}/Cql.g  ...</echo>
       <java classname="org.antlr.Tool"
             classpathref="cql3-grammar.classpath"
-            fork="true"
             failonerror="true">
-         <jvmarg value="-Xmx512M" />
          <arg value="-Xconversiontimeout" />
          <arg value="10000" />
          <arg value="${build.src.antlr}/Cql.g" />
@@ -873,10 +871,9 @@
         <!-- Note: we cannot use javac's 'release' option, as that does not allow accessing sun.misc.Unsafe nor
         Nashorn's ClassFilter class as any javac modules option is invalid for relase 8. -->
         <echo message="Compiling for Java ${target.version}..."/>
-        <javac fork="true"
+        <javac
                debug="true" debuglevel="${debuglevel}" encoding="utf-8"
-               destdir="${build.classes.main}" includeantruntime="false" source="${source.version}" target="${target.version}"
-               memorymaximumsize="512M">
+               destdir="${build.classes.main}" includeantruntime="false" source="${source.version}" target="${target.version}">
             <src path="${build.src.java}"/>
             <src path="${build.src.gen-java}"/>
             <compilerarg value="-XDignore.symbol.file"/>
@@ -1282,7 +1279,6 @@
 
   <target name="_build-test">
     <javac
-     fork="true"
      compiler="modern"
      debug="true"
      debuglevel="${debuglevel}"
