--- a/build.xml
+++ b/build.xml
@@ -122,6 +122,7 @@
     <property name="asm.version" value="7.1"/>
     <property name="allocation-instrumenter.version" value="3.1.0"/>
     <property name="bytebuddy.version" value="1.10.10"/>
+    <property name="jflex.version" value="1.8.2"/>
 
     <!-- https://mvnrepository.com/artifact/net.openhft/chronicle-bom/1.16.23 -->
     <property name="chronicle-queue.version" value="5.20.123" />
@@ -615,7 +616,7 @@
             <exclusion groupId="log4j" artifactId="log4j"/>
           </dependency>
           <dependency groupId="com.carrotsearch" artifactId="hppc" version="0.8.1" />
-          <dependency groupId="de.jflex" artifactId="jflex" version="1.6.0">
+          <dependency groupId="de.jflex" artifactId="jflex" version="${jflex.version}">
             <exclusion groupId="org.apache.ant" artifactId="ant"/>
           </dependency>
           <dependency groupId="com.github.rholder" artifactId="snowball-stemmer" version="1.3.0.581.1" />
