--- a/conf/cqlshrc.sample
+++ b/conf/cqlshrc.sample
@@ -101,6 +101,9 @@ port = 9042
 
 
 ;[ssl]
+;; Version of TLS to be used. Required to be set for cassandra version > 3.11.8
+; version = SSLv23
+
 ; certfile = ~/keys/cassandra.cert
 
 ;; Optional - true by default.
@@ -111,7 +114,6 @@ port = 9042
 
 ;; To be provided when require_client_auth=true
 ;usercert = ~/cert.pem
-
 
 
 ;; Optional section, overrides default certfile in [ssl] section, if present
