Provide a better failure message when the rat check fails
 patch by Mick Semb Wever; reviewed by David Capwell, Ekaterina Dimitrova for CASSANDRA-16620

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ logs/
 data/
 conf/hotspot_compiler
 doc/cql3/CQL.html
+pylib/src/
 
 # C* debs
 build-stamp
@@ -26,7 +27,7 @@ debian/files
 # IntelliJ
 .idea/
 *.eml
-*.iml
+**/*.iml
 *.ipr
 *.iws
 
